tests/rosetta/out/Php/15-puzzle-solver.php
<?php
$testpkg = [ 'Add' => function($a, $b) { return $a + $b; }, 'Pi' => 3.14, 'Answer' => 42 ];
echo $testpkg['FifteenPuzzleExample'](), "\n";
?>
